--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "rxjs": "^7.8.1",
     "web-vitals": "^2.1.4"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": ["node_modules/(?!@axios)/"]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
